# coppelia_sim_ros_interface

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
coppelia_sim_ros_interface/: coppelia_sim_ros_client.py  coppelia_sim_ros_server.py  utils.py
coppelia_sim_ros_interface/RLBench/: example.py
coppelia_sim_ros_interface/launch_entries/: example_run.py  server_run.py
coppelia_sim_ros_interface/tests/: coppelia_sim_example.py  neo_coppelia.py
examples/: coppelia_sim_example.py  coppelia_sim_example_nb.ipynb  coppelia_sim_ros_example.py
include/scenes/: scene_panda.ttt  scene_panda_franka_gripper.ttt  scene_panda_franka_gripper_drawers.ttt  scene_panda_franka_gripper_real.ttt  scene_panda_gripper_cbgo.ttt
launch/: coppelia_ros.launch  coppelia_sim.launch  example.launch  test_promp.launch
src/: camera.py  coppelia_sim_ros_client.py  coppelia_sim_ros_server.py  utils.py
src/examples/: control_example.py
src/tests/: coppelia_sim_example_notebook.py
srv/: AddOrEditObject.srv
